<resources>
    <string name="message_sub_separator" translatable="false">" \@ "</string>
    <string name="version_prefix">"App version: "</string>
    <string name="menu_members">Members</string>
    <string name="menu_about">About &amp; Install</string>
    <string name="menu_friendrequests">Friend Requests</string>
    <string name="menu_introduce">Share My Profile</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_upload_photo">Upload Photo</string>
    <string name="menu_upload_video">Upload Video</string>
    <string name="menu_conversations">Conversations</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_feed">Feed</string>
    <string name="settings_title_notifications">Notification Settings</string>
    <string name="settings_summary_notifications">Manage when and how to receive notifications</string>
    <string name="settings_title_profile">Profile Settings</string>
    <string name="settings_summary_profile">Manage settings relevant to your FetLife App Profile</string>
    <string name="settings_title_feed">Feed Settings</string>
    <string name="settings_summary_feed">Settings about how the feed stories should be displayed on the feed screen</string>
    <string name="settings_title_general">General Settings</string>
    <string name="settings_summary_general">Manage general App settings</string>
    <string name="menu_events">Events</string>
    <string name="text_profile_header_location">Location:</string>
    <string name="text_profile_header_orientation">Orientation:</string>
    <string name="text_profile_header_looking_for">Looking For:</string>
    <string name="text_profile_header_relationships">Relationships:</string>
    <string name="menu_updates">Check for updates</string>
    <string name="text_event_header_location">Location:</string>
    <string name="text_event_header_address">Address:</string>
    <string name="text_event_header_date">Date:</string>
    <string name="text_event_header_dresscodes">Dresscode:</string>
    <string name="text_event_header_cost">Cost:</string>
    <string name="menu_groups">Groups</string>
    <string name="menu_support">Support FetLife</string>
    <string name="menu_glossary">Kinktionary</string>
    <string name="menu_ads">Advertise on FetLife</string>
    <string name="menu_relnotes">Release Notes</string>
    <string name="nav_stuff_you_love">Stuff you Love</string>
    <string name="nav_fresh_and_pervy"><![CDATA[Fresh & Pervy]]></string>
    <string name="nav_kinky_and_popular"><![CDATA[Kinky & Popular]]></string>
</resources>