<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/navigation" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_conversations"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/menu_conversations" />

        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/menu_feed" />

        <item
            android:id="@+id/nav_members"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_members" />

        <item
            android:id="@+id/nav_friendrequests"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/menu_friendrequests" />

    </group>

    <group android:id="@+id/interaction" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_upload_pic"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/menu_upload_photo" />

        <item
            android:id="@+id/nav_upload_video"
            android:icon="@drawable/ic_videocam_black_24dp"
            android:title="@string/menu_upload_video" />

        <item
            android:id="@+id/nav_introduce"
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/menu_introduce" />

    </group>


    <group android:id="@+id/about" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notifications"
            android:icon="@android:drawable/ic_dialog_alert"
            android:title="@string/menu_notifications" />

        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_about" />

        <item
            android:id="@+id/nav_updates"
            android:icon="@drawable/ic_refresh_black_24dp"
            android:title="@string/menu_updates" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/menu_settings" />
    </group>

    <group android:id="@+id/logout" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:title="@string/menu_logout" />
    </group>


</menu>
