<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.screen.resource.EventActivity"
    tools:showIn="@layout/activity_event">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/text_event_row_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/text_event_header_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="5"
                android:gravity="right"
                android:text="@string/text_event_header_location"
                android:textColor="@color/text_color_secondary"/>

            <TextView
                android:id="@+id/text_event_value_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:gravity="left"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/text_event_row_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/text_event_header_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="5"
                android:gravity="right"
                android:text="@string/text_event_header_address"
                android:textColor="@color/text_color_secondary"/>

            <TextView
                android:id="@+id/text_event_value_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:gravity="left"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/text_event_row_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/text_event_header_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="5"
                android:gravity="right"
                android:text="@string/text_event_header_date"
                android:textColor="@color/text_color_secondary"/>

            <TextView
                android:id="@+id/text_event_value_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:gravity="left"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/text_event_row_dresscode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/text_event_header_dresscode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="5"
                android:gravity="right"
                android:text="@string/text_event_header_dresscodes"
                android:textColor="@color/text_color_secondary"/>

            <TextView
                android:id="@+id/text_event_value_dresscode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:gravity="left"
                android:textColorLink="@color/color_accent_light"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/text_event_row_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/text_event_header_cost"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="5"
                android:gravity="right"
                android:text="@string/text_event_header_cost"
                android:textColor="@color/text_color_secondary"/>

            <TextView
                android:id="@+id/text_event_value_cost"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:gravity="left"/>

        </LinearLayout>

        <TextView
            android:id="@+id/text_event_description"
            android:autoLink="web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorLink="@color/text_color_link"
            android:layout_margin="@dimen/text_margin"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>